force-app/main/default/objects/Account_Training_Information__c/Account_Training_Information__c.object-meta.xml
<CustomObject>
    <label>Account Training Information</label>
    <nameField>
        <displayFormat>ICATI--{00000}</displayFormat>
        <label>Account Training Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Training Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>