force-app/main/default/objects/Account_Training_Information__c/fields/Access_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Access_Expiry_Date__c</fullName>
    <label>Access Expiry Date</label>
    <type>Date</type>
</CustomField>