force-app/main/default/objects/Account_Training_Information__c/fields/Account_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Full_Name__c</fullName>
    <formula>Account__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Full Name</label>
    <type>Text</type>
</CustomField>