force-app/main/default/objects/Account_Training_Information__c/fields/Account_Payment_Information__c.field-meta.xml
<CustomField>
    <fullName>Account_Payment_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Payment Information</label>
    <referenceTo>Account_Payment_Information__c</referenceTo>
    <relationshipLabel>Account Training Information</relationshipLabel>
    <relationshipName>Account_Training_Information</relationshipName>
    <type>Lookup</type>
</CustomField>