force-app/main/default/objects/Account_Training_Information__c/fields/Applied_exam_date__c.field-meta.xml
<CustomField>
    <fullName>Applied_exam_date__c</fullName>
    <label>Applied exam date</label>
    <type>Date</type>
</CustomField>