force-app/main/default/objects/Account_Training_Information__c/fields/Applied_for_Exam__c.field-meta.xml
<CustomField>
    <fullName>Applied_for_Exam__c</fullName>
    <label>Applied for Exam</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>