force-app/main/default/objects/Account_Training_Information__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Account Training Information</relationshipLabel>
    <relationshipName>Account_Training_Information</relationshipName>
    <type>Lookup</type>
</CustomField>