force-app/main/default/objects/Account_Training_Information__c/fields/Certificate_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Expire_Date__c</fullName>
    <formula>DATE( YEAR( Exam_Cleared_Date__c )+ 3 , MONTH(Exam_Cleared_Date__c ) , DAY(Exam_Cleared_Date__c ) )</formula>
    <label>Certificate Expire Date</label>
    <type>Date</type>
</CustomField>