force-app/main/default/objects/Account_Training_Information__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Account Training Information</relationshipLabel>
    <relationshipName>Account_Training_Information</relationshipName>
    <type>Lookup</type>
</CustomField>