force-app/main/default/objects/Account_Training_Information__c/fields/Date_of_Billing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Billing__c</fullName>
    <label>Date of Billing</label>
    <type>Date</type>
</CustomField>