force-app/main/default/objects/Account_Training_Information__c/fields/Exam_Attempt_Details__c.field-meta.xml
<CustomField>
    <fullName>Exam_Attempt_Details__c</fullName>
    <label>Exam Attempt Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>