force-app/main/default/objects/Account_Training_Information__c/fields/Exam_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Cleared_Date__c</fullName>
    <label>Exam Cleared Date</label>
    <type>Date</type>
</CustomField>