force-app/main/default/objects/Account_Training_Information__c/fields/Exam_Fee_Paid__c.field-meta.xml
<CustomField>
    <fullName>Exam_Fee_Paid__c</fullName>
    <label>Exam Fee Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>