force-app/main/default/objects/Account_Training_Information__c/fields/Exam_Results__c.field-meta.xml
<CustomField>
    <fullName>Exam_Results__c</fullName>
    <label>Exam Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Not Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>