force-app/main/default/objects/Account_Training_Information__c/fields/Exam_Scheduled_On__c.field-meta.xml
<CustomField>
    <fullName>Exam_Scheduled_On__c</fullName>
    <description>mention the date of exam will scheduled</description>
    <label>Exam Scheduled On</label>
    <type>Date</type>
</CustomField>