force-app/main/default/objects/Account_Training_Information__c/fields/Google_Review__c.field-meta.xml
<CustomField>
    <fullName>Google_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Google Review</label>
    <type>Checkbox</type>
</CustomField>