force-app/main/default/objects/Account_Training_Information__c/fields/Hall_of_Fame__c.field-meta.xml
<CustomField>
    <fullName>Hall_of_Fame__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hall of Fame</label>
    <type>Checkbox</type>
</CustomField>