force-app/main/default/objects/Account_Training_Information__c/fields/Mobile1_Primary__c.field-meta.xml
<CustomField>
    <fullName>Mobile1_Primary__c</fullName>
    <formula>Account__r.Mobile1_Primary__c</formula>
    <label>Mobile1 (Primary)</label>
    <type>Text</type>
</CustomField>