force-app/main/default/objects/Account_Training_Information__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <inlineHelpText>Portal access User Name Password</inlineHelpText>
    <label>Password</label>
    <length>250</length>
    <type>Text</type>
</CustomField>