force-app/main/default/objects/Account_Training_Information__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>TEXT( Account_Payment_Information__r.Payment_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>