force-app/main/default/objects/Account_Training_Information__c/fields/PMI_ID__c.field-meta.xml
<CustomField>
    <fullName>PMI_ID__c</fullName>
    <inlineHelpText>Will be auto-filled based on the Account.</inlineHelpText>
    <label>PMI ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>