force-app/main/default/objects/Account_Training_Information__c/fields/PMI_Material_Key__c.field-meta.xml
<CustomField>
    <fullName>PMI_Material_Key__c</fullName>
    <label>PMI Material Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>