force-app/main/default/objects/Account_Training_Information__c/fields/PMI_Material_Key_Cost__c.field-meta.xml
<CustomField>
    <fullName>PMI_Material_Key_Cost__c</fullName>
    <label>PMI Material Key Cost</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>