force-app/main/default/objects/Account_Training_Information__c/fields/Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Portal_Access__c</fullName>
    <label>Portal Access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>R2PS</fullName>
            </value>
            <value>
                <fullName>ICLeaF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>