force-app/main/default/objects/Account_Training_Information__c/fields/Post_Class_Survey__c.field-meta.xml
<CustomField>
    <fullName>Post_Class_Survey__c</fullName>
    <label>Post Class Survey</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>