force-app/main/default/objects/Account_Training_Information__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <label>Promo Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>