force-app/main/default/objects/Account_Training_Information__c/fields/Success_Story_Video__c.field-meta.xml
<CustomField>
    <fullName>Success_Story_Video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success Story Video</label>
    <type>Checkbox</type>
</CustomField>