force-app/main/default/objects/Account_Training_Information__c/fields/Training_Cerificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Training_Cerificate_Number__c</fullName>
    <label>Training Cerificate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>