force-app/main/default/objects/Account_Training_Information__c/fields/Training_Certificate_Link__c.field-meta.xml
<CustomField>
    <fullName>Training_Certificate_Link__c</fullName>
    <label>Training Certificate Link</label>
    <type>Url</type>
</CustomField>