force-app/main/default/objects/Account_Training_Information__c/fields/Trust_Pilot_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Trust_Pilot_Feedback__c</fullName>
    <label>Trust Pilot Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>