force-app/main/default/objects/Account_Training_Information__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>Account__r.Email1_Primary__c</formula>
    <inlineHelpText>Portal Access User Name - This is the participant’s primary email ID (Email 1 (Primary))</inlineHelpText>
    <label>User Name</label>
    <type>Text</type>
</CustomField>