force-app/main/default/objects/Account_Training_Information__c/fields/Users_Name__c.field-meta.xml
<CustomField>
    <fullName>Users_Name__c</fullName>
    <inlineHelpText>Portal Access User Name - This is the participant’s primary email ID (Email 1 (Primary))</inlineHelpText>
    <label>UsersName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>