force-app/main/default/objects/Account_Training_Information__c/validationRules/Course_changing.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_changing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(  Course__c ), !ISPICKVAL( Account_Payment_Information__r.Payment_Status__c , &apos;Yet To Receive&apos;) ,( !ISBLANK( Account_Payment_Information__c ) ) )</errorConditionFormula>
    <errorDisplayField>Course__c</errorDisplayField>
    <errorMessage>Course cannot be changed for this ATI.</errorMessage>
</ValidationRule>