force-app/main/default/objects/Account_Training_Information__c/validationRules/PMI_Material_Key_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PMI_Material_Key_Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !ISBLANK( PMI_Material_Key__c ) , ISBLANK( Date_of_Purchase__c ) )</errorConditionFormula>
    <errorDisplayField>Date_of_Purchase__c</errorDisplayField>
    <errorMessage>Fill the Date of Purchase Field</errorMessage>
</ValidationRule>