force-app/main/default/objects/Account_Training_Information__c/validationRules/PMI_Material_Key_Email_Validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>PMI_Material_Key_Email_Validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( PMI_Material_Key__c ) , !ISBLANK( Date_of_Purchase__c ) )</errorConditionFormula>
    <errorDisplayField>PMI_Material_Key__c</errorDisplayField>
    <errorMessage>Fill the PMI Material Key Field</errorMessage>
</ValidationRule>