force-app/main/default/objects/Account_Training_Information__c/validationRules/Training_Certification_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Training_Certification_Email_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( !ISBLANK( Training_Cerificate_Number__c ) , ISBLANK( Training_Certificate_Link__c ))</errorConditionFormula>
    <errorDisplayField>Training_Certificate_Link__c</errorDisplayField>
    <errorMessage>Fill the Training Certificate Link Field</errorMessage>
</ValidationRule>