force-app/main/default/objects/Account_Training_Information__c/validationRules/Training_Certification_Email_Validation2.validationRule-meta.xml
<ValidationRule>
    <fullName>Training_Certification_Email_Validation2</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISBLANK( Training_Cerificate_Number__c ) , !ISBLANK( Training_Certificate_Link__c ))</errorConditionFormula>
    <errorDisplayField>Training_Cerificate_Number__c</errorDisplayField>
    <errorMessage>Fill the Training Certificate Field</errorMessage>
</ValidationRule>