force-app/main/default/objects/Account_Training_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Course__c</columns>
    <columns>Batch__c</columns>
    <columns>Account_Payment_Information__c</columns>
    <columns>Training_Status__c</columns>
    <columns>Success_Story_Video__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>