force-app/main/default/objects/Account_Training_Information__c/listViews/ATI_List_Views.listView-meta.xml
<ListView>
    <fullName>ATI_List_Views</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Course__c</columns>
    <columns>Batch__c</columns>
    <columns>Training_Status__c</columns>
    <columns>Training_Cerificate_Number__c</columns>
    <columns>Exam_Cleared_Date__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>ATI List Views</label>
</ListView>